# research

./: .gitignore
Calculator/: engine.cpp  engine.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tests.cpp
Calculator/CalcTest/: CalcTest.pro  gtest_dependency.pri  main.cpp  tst_calculations.h
LeetCode/two_sum/: CMakeLists.txt  two_sum.cpp
RecipeFinder/: RecipeFinder  RecipeFinder.cpp
VectorTest/: CMakeLists.txt  main.cpp  tests.cpp  vector.h
binary_search/: CMakeLists.txt  find.h  main.cpp  tests.cpp
bubble_sort/: CMakeLists.txt  main.cpp
current_task/: current_task  current_task.cpp
fibonacci_first/: fibonacci_first.cpp
figures/: CMakeLists.txt  Circle.cpp  Circle.h  Figure.h  Quadrate.cpp  Quadrate.h  Rectangle.cpp  Rectangle.h  main.cpp
first/: main.cpp
fizz_buzz/: CMakeLists.txt  main.cpp
inheritance/: CMakeLists.txt  main.cpp
my_list_vision/: CMakeLists.txt  List.cpp  List.h  Node.cpp  Node.h  tests.cpp
prime_number_calculator/: CMakeLists.txt  main.cpp
producer_consumer_question/: producer_consumer_question.cpp  producer_consumer_question.sln  producer_consumer_question.vcxproj  producer_consumer_question.vcxproj.filters
profile/: CMakeLists.txt
same_sign_of_int_in_array/: CMakeLists.txt  main.cpp
ski_equipment/: CMakeLists.txt  main.cpp
threading/: CMakeLists.txt  threading.cpp  threading.h
tic_tac_toe_game/tic_tac_toe_game/: Field.cpp  Field.h  main.cpp  tic_tac_toe_game.vcxproj  tic_tac_toe_game.vcxproj.filters
unordered_set/: CMakeLists.txt  UnorderedSet.cpp  UnorderedSet.h  main.cpp
(+19 files in other folders)
